# store_project

./: .flake8  .gitignore  README.md  coverage_report.txt  main.py  pyproject.toml
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_base_product_py.html  z_145eef247bfb46b6_category_py.html  z_145eef247bfb46b6_lawn_grass_py.html  z_145eef247bfb46b6_mixins_py.html  z_145eef247bfb46b6_product_py.html  z_145eef247bfb46b6_smartphone_py.html  z_145eef247bfb46b6_utils_py.html
src/: __init__.py  base_product.py  category.py  lawn_grass.py  mixins.py  product.py  smartphone.py  utils.py
tests/: est_magic_methods.py  test_abstract_and_mixin.py  test_additional_coverage.py  test_inheritance.py  test_iterator.py  test_models.py  test_product.py  test_product_category.py  test_utils.py
